--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
-  text-align: center;
-}
+* {
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  font-family: "Times New Roman", Times, serif;
+  
 }
+body{
+  background-color: rgb(153, 158, 158);
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+/* class in app.js  */
+.Todo-App{
+  /* display: flex;
   flex-direction: column;
+  justify-content: start; */
+  width: 700px;
+  /* min-height keeps on increasing height according to the content  */
+  min-height: 300px;
+  background: #161a2b;
+  text-align: center;
+  margin: 128px auto;
+  border-radius: 10px;
+  padding-bottom: 32px;
+  margin: 20px auto 128px auto;
+}
+
+
+h1 {
+  margin: 32px 0;
+  color: #fff;
+  font-size: 24px;
+  padding: 20px 0px;
+}
+
+.todo-button {
+  padding: 16px;
+  border: none;
+  border-radius: 0 4px 4px 0;
+  cursor: pointer;
+  outline: none;
+  background: linear-gradient(
+    90deg,
+    rgb(150, 197, 252) 0%,
+    rgb(64, 102, 121) 100%
+  );
+  color: #fff;
+}
+.todo-input {
+  padding: 14px 32px 14px 16px;
+  border-radius: 4px 0 0 4px;
+  border: 2px solid  rgb(150, 197, 252);
+  outline: none;
+  width: 70%;
+  background: transparent;
+  color: #fff;
+}
+.todo-row {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 4px auto;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bolder;
+  background: linear-gradient(
+    90deg,
+    rgb(150, 197, 252) 0%,
+    rgb(64, 102, 121) 100%
+  );
+
+  padding: 16px;
+  border-radius: 5px;
+  width: 75%;
 }
 
-.App-link {
-  color: #61dafb;
+.complete{
+  text-decoration: line-through;
+  opacity:0.4;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icons {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.delete-icon {
+  margin-right: 5px;
+  color: #fff;
+}
+
+.edit-icon {
+  color: #fff;
+  margin: 5px;
+}
+.edit-inputfield{
+  margin: 10px;
+  align-items: center;
 }
